Fixed project links and alignment for containers.

--- a/components/ProjectSection/projectsection.module.css
+++ b/components/ProjectSection/projectsection.module.css
@@ -9,12 +9,17 @@
     align-items: center;
 }
 
+.secondaryContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .title {
-    min-width: 50%;
     justify-content: flex-start;
     letter-spacing: 0.3rem;
-    font-weight: 300;
-    margin: 2rem;
+    font-weight: 500;
+    margin: 0 0 2rem 0;
 }
 
 .content {
@@ -32,6 +37,19 @@
         grid-template-columns: 1fr;
         row-gap: 1rem;
         column-gap: 0;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 767px) {
+    .container {
+        min-height: 50rem;
+    }
+
+    .content {
+        min-width: 35rem;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 1rem;
+        column-gap: 1rem;
     }
 }
 
